--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Self-Hosted Video -->
     <div class="video-container">
-        <video controls autoplay loop muted>
+        <video autoplay loop muted>
             <source src="hellotraveller.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
