changed to gif; using music only from video

--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
     <!-- Cryptic Header -->
     <div class="cryptic-text">𝕋𝕙𝕖 𝕍𝕠𝕚𝕕 𝕚𝕤 𝕨𝕒𝕥𝕔𝕙𝕚𝕟𝕘...</div>
 
-    <!-- Self-Hosted Video -->
-    <div class="video-container">
-        <video autoplay loop muted>
-            <source src="hellotraveller.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
+<iframe id="hidden-audio"
+    src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&playlist=dQw4w9WgXcQ&controls=0&showinfo=0"
+    frameborder="0"
+    allow="autoplay"
+    style="position: absolute; width: 1px; height: 1px; left: -9999px;">
+</iframe>
+    
+<div class="gif-container">
+    <img src="welcometraveller.gif" alt="Glitching GIF">
+</div>
+
 
 </body>
 </html>
