--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="cryptic-text">𝕋𝕙𝕖 𝕍𝕠𝕚𝕕 𝕚𝕤 𝕨𝕒𝕥𝕔𝕙𝕚𝕟𝕘...</div>
 
 <iframe id="hidden-audio"
-    src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&loop=1&playlist=dQw4w9WgXcQ&controls=0&showinfo=0"
+    src="https://www.youtube.com/embed/1DokJjOwymM?autoplay=1&loop=1&playlist=dQw4w9WgXcQ&controls=0&showinfo=0"
     frameborder="0"
     allow="autoplay"
     style="position: absolute; width: 1px; height: 1px; left: -9999px;">
