--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- GIF in Place of Video -->
     <div class="gif-container">
-        <img src="welcometraveller.gif" alt="Glitching GIF">
+        <img src="welcome.gif" alt="Glitching GIF">
     </div>
 
 </body>
