--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
         frameborder="0"
         allow="autoplay">
     </iframe>
-
+<br>
     <!-- GIF in Place of Video -->
     <div class="gif-container">
         <img src="welcome.gif" alt="welcomethelight">
     </div>
+<br>
+    <!-- Windows 95 Style Button -->
+<a href="light.html" class="win95-button">Take me to the light</a>
+
 
 </body>
 </html>
