--- a/light.html
+++ b/light.html
@@ -74,7 +74,7 @@
 <body>
 
   <div class="image-container">
-    <img src="kek-statue.jpeg" alt="Praise Kek">
+    <img src="kek-statue.jpeg" class="small-image" alt="Praise Kek">
 </div>
 
     <div class="glitch-text">𝕂𝔼𝕂 𝕀𝕊 𝕃𝕀𝔾ℍ𝕋.</div>
