--- a/light.html
+++ b/light.html
@@ -77,6 +77,15 @@
     <img src="kek-statue.jpeg" class="small-image" alt="Praise Kek">
 </div>
 
+    <br>
+
+        <!-- Hidden YouTube Audio -->
+    <iframe id="hidden-audio"
+        src="https://www.youtube.com/embed/1DokJjOwymM?autoplay=1&loop=1&playlist=1DokJjOwymM&controls=0&showinfo=0"
+        frameborder="0"
+        allow="autoplay">
+    </iframe>
+
     <div class="glitch-text">𝕂𝔼𝕂 𝕀𝕊 𝕃𝕀𝔾ℍ𝕋.</div>
 
 <div class="praise">
