--- a/light.html
+++ b/light.html
@@ -63,6 +63,16 @@
             display: inline-block;
         }
 
+        /* Completely Hide the YouTube Audio Player */
+        #hidden-audio {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            left: -9999px;
+            opacity: 0;
+        }
+
+
         .back-button:active {
             border: 2px solid #404040;
             border-top: 2px solid #808080;
