--- a/light.html
+++ b/light.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #222;
-            color: #00ff99;
+            color: #000000;
             font-family: "Courier New", monospace;
             text-align: center;
             display: flex;
