--- a/light.html
+++ b/light.html
@@ -6,7 +6,7 @@
     <title>The Ascension</title>
     <style>
         body {
-            background-color: #222;
+            background-color: #000000;
             color: #00ff99;
             font-family: "Courier New", monospace;
             text-align: center;
@@ -96,6 +96,10 @@
         allow="autoplay">
     </iframe>
 
+    <div class="gif-container">
+        <img src="candle.gif" alt="the light...">
+    </div>
+
     <div class="glitch-text">𝕂𝔼𝕂 𝕀𝕊 𝕃𝕀𝔾ℍ𝕋.</div>
 
 <div class="praise">
@@ -115,6 +119,9 @@
         Soon, the golden light will shine upon the worthy. <br>
     </div>
 
+    <div class="gif-container">
+        <img src="candle.gif" alt="the light...">
+    </div>
 
     <a href="index.html" class="back-button">Return to the Void...</a>
 
