--- a/light.html
+++ b/light.html
@@ -47,6 +47,13 @@
             height: auto;
         }
 
+        /* Resize Only This Specific GIF */
+        .small-gif {
+            width: 20px; /* Adjust size */
+            height: auto; /* Keeps proportions */
+        }
+
+
         .back-button {
             margin-top: 30px;
             padding: 10px 20px;
@@ -83,9 +90,7 @@
 </head>
 <body>
 
-  <div class="image-container">
-    <img src="kek-statue.jpeg" class="small-image" alt="Praise Kek">
-</div>
+  <img src="candle.gif" class="small-gif" alt="the light...">
 
     <br>
 
@@ -119,9 +124,7 @@
         Soon, the golden light will shine upon the worthy. <br>
     </div>
 
-    <div class="gif-container">
-        <img src="candle.gif" alt="the light...">
-    </div>
+    <img src="candle.gif" class="small-gif" alt="the light...">
 
     <a href="index.html" class="back-button">Return to the Void...</a>
 
