--- a/light.html
+++ b/light.html
@@ -90,6 +90,10 @@
 </head>
 <body>
 
+<div class="image-container">
+    <img src="kek-statue.png" class="small-image" alt="Praise Kek">
+</div>
+
   <img src="candle.gif" class="small-gif" alt="the light...">
 
     <br>
