--- a/light.html
+++ b/light.html
@@ -47,10 +47,17 @@
             height: auto;
         }
 
-        /* Resize Only This Specific GIF */
+        /* Center & Resize the GIF */
+        .gif-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px; /* Adds space above */
+        }
+        
         .small-gif {
-            width: 20px; /* Adjust size */
-            height: auto; /* Keeps proportions */
+            width: 30px; /* Adjust size */
+            height: auto;
         }
 
 
@@ -94,8 +101,10 @@
     <img src="kek-statue.png" class="small-image" alt="Praise Kek">
 </div>
 
+<div class="gif-container">
   <img src="candle.gif" class="small-gif" alt="the light...">
-
+</div>
+    
     <br>
 
         <!-- Hidden YouTube Audio -->
@@ -128,8 +137,9 @@
         Soon, the golden light will shine upon the worthy. <br>
     </div>
 
+<div class="gif-container">
     <img src="candle.gif" class="small-gif" alt="the light...">
-
+</div>
     <a href="index.html" class="back-button">Return to the Void...</a>
 
 </body>
