--- a/light.html
+++ b/light.html
@@ -98,7 +98,7 @@
 <body>
 
 <div class="image-container">
-    <img src="kek-statue.png" class="small-image" alt="Praise Kek">
+    <img src="kek-statue.jpeg" class="small-image" alt="Praise Kek">
 </div>
 
 <div class="gif-container">
