--- a/light.html
+++ b/light.html
@@ -74,14 +74,16 @@
             height: auto; /* Keeps proportions */
             display: block; /* Prevents extra spacing issues */
             margin: 50px auto 20px auto; /* Adds space at the top, centers it */
+            max-width: 100%; /* Prevents it from being cut off */
         }
 
-        /* Responsive Fix: Add Extra Space on Mobile */
+        /* Mobile Optimization */
         @media (max-width: 768px) {
-            .image-container {
-                margin-top: 100px; /* More space on small screens */
+            .small-image {
+                width: 180px;
+                margin-top: 80px;
             }
-}
+        }
 
         .back-button {
             margin-top: 30px;
