--- a/light.html
+++ b/light.html
@@ -10,6 +10,8 @@
             color: #00ff99;
             font-family: "Courier New", monospace;
             text-align: center;
+            overflow: visible !important;
+            min-height: 100vh; /* Ensures page is tall enough */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -65,19 +67,23 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            width: 100%; /* Ensures it doesn't cut off */
-            overflow: visible; /* Prevents cropping */
+            width: 100%; /* Ensures it takes full width */
+            min-height: 400px; /* Makes sure it has enough space */
+            overflow: visible !important; /* Prevents cropping */
             margin-top: 50px;
         }
 
+
         /* Resize & Center Kek Statue */
         .small-image {
-            width: 400px; /* Adjust size as needed */
-            height: auto; /* Keeps proportions */
-            display: block; /* Prevents extra spacing issues */
-            margin: 50px auto 20px auto; /* Adds space at the top, centers it */
-            max-width: 100%; /* Prevents it from being cut off */
+            width: 400px; /* Adjust size */
+            height: auto;
+            display: block;
+            margin: 50px auto 20px auto;
+            max-width: 100%;
+            object-fit: contain; /* Ensures the full image is visible */
         }
+
 
         /* Mobile Optimization */
         @media (max-width: 768px) {
