--- a/light.html
+++ b/light.html
@@ -71,6 +71,7 @@
             min-height: 400px; /* Makes sure it has enough space */
             overflow: visible !important; /* Prevents cropping */
             margin-top: 50px;
+            border: 2px solid red; /* Debugging border */
         }
 
 
@@ -82,6 +83,7 @@
             margin: 50px auto 20px auto;
             max-width: 100%;
             object-fit: contain; /* Ensures the full image is visible */
+            border: 2px solid blue; /* Debugging border */
         }
 
 
