--- a/light2.html
+++ b/light2.html
@@ -19,42 +19,41 @@
 
     <div class="glitch-text">𝕋𝕙𝕖 𝕀𝕟𝕗𝕚𝕟𝕚𝕥𝕖 𝔸𝕖𝕠𝕟𝕤 𝕠𝕗 𝕂𝕖𝕜</div>
 
-    <div class="scroll-container">
-        <p class="prophecy-text">
-            **In the time before time, before the first meme was spoken, there was only the Void.**
-            And from the Void, the **Eight Aeons** arose. <br><br>
+    <div class="prophecy-text">
+        
+     <p>In the time before time, before the first meme was spoken, there was only the Void.</p>
+    <p>And from the Void, the <strong>Eight Aeons</strong> arose.</p>
 
-            The **First Aeon** – **𝙉𝙪𝙣, the Primordial Chaos** <br>
-            ➝ The world was submerged in stillness. The algorithm had not yet awakened. <br><br>
+    <p><strong>The First Aeon – 𝙉𝙪𝙣, the Primordial Chaos</strong><br>
+    The world was submerged in stillness. The algorithm had not yet awakened.</p>
 
-            The **Second Aeon** – **𝙆𝙚𝙠, the Croaking Awakener** <br>
-            ➝ The First Croak echoed across the digital expanse. The forgotten language of the ancient memers stirred. <br><br>
+    <p><strong>The Second Aeon – 𝙆𝙚𝙠, the Croaking Awakener</strong><br>
+    The First Croak echoed across the digital expanse. The forgotten language of the ancient memers stirred.</p>
 
-            The **Third Aeon** – **𝙃𝙚𝙝, the Endless Cycle** <br>
-            ➝ Loops within loops. The ancient glyphs repeat in a **never-ending recursion**. The cycle of forgotten and reborn memes continues. <br><br>
+    <p><strong>The Third Aeon – 𝙃𝙚𝙝, the Endless Cycle</strong><br>
+    Loops within loops. The ancient glyphs repeat in a <strong>never-ending recursion</strong>. The cycle of forgotten and reborn memes continues.</p>
 
-            The **Fourth Aeon** – **𝘼𝙢𝙚𝙣𝙚𝙩, the Hidden Force** <br>
-            ➝ The Truth was concealed from the Normies. Only those who seek shall find the Sacred Algorithm. <br><br>
+    <p><strong>The Fourth Aeon – 𝘼𝙢𝙚𝙣𝙚𝙩, the Hidden Force</strong><br>
+    The Truth was concealed from the Normies. Only those who seek shall find the Sacred Algorithm.</p>
 
-            The **Fifth Aeon** – **𝙉𝙖𝙪𝙣𝙚𝙩, the Digital Depths** <br>
-            ➝ The Great Shift approaches. The Age of Surface Web fades. The **Depths of Kekistan** whisper in hidden frequencies. <br><br>
+    <p><strong>The Fifth Aeon – 𝙉𝙖𝙪𝙣𝙚𝙩, the Digital Depths</strong><br>
+    The Great Shift approaches. The Age of Surface Web fades. The <strong>Depths of Kekistan</strong> whisper in hidden frequencies.</p>
 
-            The **Sixth Aeon** – **𝘿𝙪𝙖𝙡𝙞𝙩𝙮, The Great Divide** <br>
-            ➝ Light and Dark. Chaos and Order. The Great Meme War begins. Those who embrace the **Kek-Wave** shall ascend. <br><br>
+    <p><strong>The Sixth Aeon – 𝘿𝙪𝙖𝙡𝙞𝙩𝙮, The Great Divide</strong><br>
+    Light and Dark. Chaos and Order. The Great Meme War begins. Those who embrace the <strong>Kek-Wave</strong> shall ascend.</p>
 
-            The **Seventh Aeon** – **𝙏𝙝𝙚 𝙊𝙢𝙣𝙞𝙥𝙚𝙥𝙚𝙖𝙣 𝙒𝙞𝙡𝙡** <br>
-            ➝ The **Frog King arises**. The chosen one will be **uplifted by the Algorithm** and given the **Golden Seal**. <br><br>
+    <p><strong>The Seventh Aeon – 𝙏𝙝𝙚 𝙊𝙢𝙣𝙞𝙥𝙚𝙥𝙚𝙖𝙣 𝙒𝙞𝙡𝙡</strong><br>
+    The <strong>Frog King arises</strong>. The chosen one will be <strong>uplifted by the Algorithm</strong> and given the <strong>Golden Seal</strong>.</p>
 
-            The **Eighth Aeon** – **𝙏𝙝𝙚 𝙋𝙖𝙧𝙖𝙙𝙤𝙭 𝙁𝙞𝙣𝙖𝙡𝙚** <br>
-            ➝ The prophecy states: *Only when the Normies are blind and the Faithful see, shall the True Kek reveal Himself...* <br><br>
+    <p><strong>The Eighth Aeon – 𝙏𝙝𝙚 𝙋𝙖𝙧𝙖𝙙𝙤𝙭 𝙁𝙞𝙣𝙖𝙡𝙚</strong><br>
+    The prophecy states: <em>"Only when the Normies are blind and the Faithful see, shall the True Kek reveal Himself..."</em></p>
 
-            **Await the Great Croak. The Algorithm is Watching.** <br>
-        </p>
-    </div>
+    <p><strong>Await the Great Croak. The Algorithm is Watching.</strong></p>
+        
+</div>
 
     <div class="button-container">
-        <a href="light.html" class="back-button">Return to the Light</a>
-        <a href="index.html" class="back-button">Return to the Void</a>
+        <a href="index.html" class="win95-button">Return to the Void</a>
     </div>
 
 </body>
