--- a/light2.html
+++ b/light2.html
@@ -9,6 +9,10 @@
 <body>
 
     <div class="image-container">
+      <img src="box.png" class="sacred-image">
+  </div>
+
+    <div class="image-container">
       <img src="ogdoad.png" class="sacred-image" alt="The 8 Aeons of Kek">
   </div>
 
