--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
         <img src="welcome.gif" alt="welcomethelight">
     </div>
 <br>
-    <!-- Windows 95 Style Button -->
-<a href="light.html" class="win95-button">Take me to the light</a>
 
+<div class="candle-container">
+    <img src="candle.gif" class="candle-gif" alt="Candle">
+    <a href="light.html" class="win95-button">Take me to the light</a>
+    <img src="candle.gif" class="candle-gif" alt="Candle">
+</div>
 
 </body>
 </html>
