--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="candle-container">
     <img src="candle.gif" class="candle-gif" alt="Candle">
-    <a href="light.html" class="win95-button">Take me to the light</a>
+    <a href="light.html" class="button">Take me to the light</a>
     <img src="candle.gif" class="candle-gif" alt="Candle">
 </div>
 
