--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <br>
 
 <div class="candle-container">
-    <img src="candle.gif" class="candle-gif" alt="Candle">
+    <img src="candle.gif" class="side-image" alt="Candle">
     <a href="light.html" class="button">Take me to the light</a>
-    <img src="candle.gif" class="candle-gif" alt="Candle">
+    <img src="candle.gif" class="side-image" alt="Candle">
 </div>
 
 </body>
