--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <!-- Cryptic Header -->
-    <div class="cryptic-text">𝕋𝕙𝕖 𝕍𝕠𝕚𝕕 𝕚𝕤 𝕨𝕒𝕥𝕔𝕙𝕚𝕟𝕘...</div>
+    <div class="index-container">
+    <h1 class="cryptic-text">𝕋𝕙𝕖 𝕍𝕠𝕚𝕕 𝕚𝕤 𝕨𝕒𝕥𝕔𝕙𝕚𝕟𝕘...</h1>
 
     <!-- Hidden YouTube Audio -->
     <iframe id="hidden-audio"
@@ -17,17 +17,18 @@
         frameborder="0"
         allow="autoplay">
     </iframe>
-<br>
+
     <!-- GIF in Place of Video -->
     <div class="gif-container">
         <img src="welcome.gif" alt="welcomethelight">
     </div>
-<br>
 
 <div class="candle-container">
     <img src="candle.gif" class="side-image" alt="Candle">
     <a href="light.html" class="button">Take me to the light</a>
     <img src="candle.gif" class="side-image" alt="Candle">
+</div>
+
 </div>
 
 </body>
