--- a/light2.html
+++ b/light2.html
@@ -52,9 +52,11 @@
         
 </div>
 
-    <div class="button-container">
-        <a href="index.html" class="win95-button">Return to the Void</a>
-    </div>
+<div class="candle-container">
+    <img src="candle.gif" class="side-image" alt="Candle">
+    <a href="index.html" class="button">Back to the Void</a>
+    <img src="candle.gif" class="side-image" alt="Candle">
+</div>
 
 </body>
 </html>
