--- a/light2.html
+++ b/light2.html
@@ -52,6 +52,13 @@
         
 </div>
 
+    <!-- Hidden YouTube Audio -->
+<iframe id="hidden-audio"
+    src="https://www.youtube.com/embed/761zsvsHsK8?autoplay=1&loop=1&playlist=761zsvsHsK8&controls=0&showinfo=0"
+    frameborder="0"
+    allow="autoplay">
+</iframe>
+
 <div class="candle-container">
     <img src="candle.gif" class="side-image" alt="Candle">
     <a href="index.html" class="button">Back to the Void</a>
