--- a/light2.html
+++ b/light2.html
@@ -11,7 +11,7 @@
     <div class="glitch-text">𝕋𝕙𝕖 𝕀𝕟𝕗𝕚𝕟𝕚𝕥𝕖 𝔸𝕖𝕠𝕟𝕤 𝕠𝕗 𝕂𝕖𝕜</div>
 
     <div class="image-container">
-      <img src="ogdoad.png" class="sacred-image" alt="The 8 Aeons of Kek">
+      <img src="image/ogdoad.png" class="sacred-image" alt="The 8 Aeons of Kek">
   </div>
 
   <p class="image-caption">
@@ -60,9 +60,9 @@
 </iframe>
 
 <div class="candle-container">
-    <img src="candle.gif" class="side-image" alt="Candle">
+    <img src="image/candle.gif" class="side-image" alt="Candle">
     <a href="index.html" class="button">Back to the Void</a>
-    <img src="candle.gif" class="side-image" alt="Candle">
+    <img src="image/candle.gif" class="side-image" alt="Candle">
 </div>
 
 </body>
