--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <!-- GIF in Place of Video -->
     <div class="gif-container">
-        <img src="images/welcome.gif" alt="welcomethelight">
+        <img src="image/welcome.gif" alt="welcomethelight">
     </div>
 
 <div class="candle-container">
-    <img src="images/candle.gif" class="side-image" alt="Candle">
+    <img src="image/candle.gif" class="side-image" alt="Candle">
     <a href="light.html" class="button">Take me to the light</a>
-    <img src="images/candle.gif" class="side-image" alt="Candle">
+    <img src="image/candle.gif" class="side-image" alt="Candle">
 </div>
 
 </div>
