--- a/light.html
+++ b/light.html
@@ -12,9 +12,9 @@
 <body>
 
 <div class="row">
-    <img src="candle.gif" class="side-image" alt="candle">
-    <img src="kek-statue.jpeg" class="small-image" alt="Praise Kek">
-    <img src="candle.gif" class="side-image" alt="candle">
+    <img src="image/candle.gif" class="side-image" alt="candle">
+    <img src="image/kek-statue.jpeg" class="small-image" alt="Praise Kek">
+    <img src="image/candle.gif" class="side-image" alt="candle">
 </div>
 
         <!-- Hidden YouTube Audio -->
