--- a/light.html
+++ b/light.html
@@ -44,8 +44,8 @@
     </div>
 
 <div class="button-container">
-    <a href="index.html" class="button">Return to the Void...</a>
-    <a href="light2.html" class="button">... Keep going</a>
+    <a href="index.html" class="button">Return to the Void</a>
+    <a href="kek.html" class="button">Keep going</a>
 </div>
     
 
