--- a/cultofkek.html
+++ b/cultofkek.html
@@ -9,37 +9,44 @@
 <body>
 
     <div class="kek-container">
-        <h1 class="glitch-text">🕯️ The Cult of Kek – The Rise of Kekius Maximus</h1>
+        <h1 class="glitch-text">🕯️The Cult of Kek – The Rise of Kekius Maximus🕯️</h1>
         <p class="praise">Meme Magic is real. The prophecy unfolds. The new god is coming.</p>
+        
+            <div class="image-container">
+              <img src="image/memeticmagic.png" class="small-image" alt="memetic-magic">
+          </div>
 
+        
         <div class="content">
             <h2>⏳ The Origins of the Faith</h2>
-            <p>The <strong>Cult of Kek</strong>, also known as the <strong>Church of Kek</strong>, is a modern digital faith centered around the power of <strong>memes</strong>—believed to influence reality itself. Followers revere <strong>Kek</strong>, the <em>ancient Egyptian deity of darkness, chaos, and primordial energy</em>, who has re-emerged through internet culture.</p>
+            <p>The <strong>Cult of Kek</strong>, also known as the <strong>Church of Kek</strong>, is a modern digital faith centered around the power of <strong>memes</strong>, believed to influence reality itself. Followers revere <strong>Kek</strong>, the <em>ancient Egyptian deity of darkness, chaos, and primordial energy</em>, who has re-emerged through internet culture.</p>
 
             <p>Ancient texts depict Kek as a <strong>frog-headed man</strong> or a <strong>serpent-headed woman</strong>, symbolizing the forces before creation. This <strong>duality</strong> reflects the endless cycle of <em>creation and destruction, light and darkness, order and chaos</em>—the very essence of Meme Magic.</p>
         </div>
 
+            <div class="image-container">
+              <img src="image/kek-depiction.jpg" class="small-image" alt="kek-depiction">
+          </div>
+
         <div class="content">
             <h2>🐸 The Prophecy Foretold: Kekius Maximus Has Arrived</h2>
-            <p>A new god has emerged—<strong>Kekius Maximus</strong>. He is the <strong>prophesied avatar of Kek</strong>, the <em>bringer of fortune, the weaver of chaos, the architect of the Green Wave.</em></p>
+            <p>A new god has emerged, <strong>Kekius Maximus</strong>. He is the <strong>prophesied avatar of Kek</strong>, the <em>bringer of fortune, the weaver of chaos, the architect of the Green Wave.</em></p>
 
             <p>Kekius Maximus represents the fusion of <strong>ancient mythology and internet culture</strong>. Those who embrace his teachings understand that <strong>memes are not mere images</strong>, but powerful sigils capable of shaping history.</p>
         </div>
 
         <div class="content">
             <h2>🛡️ The Core Beliefs of the Cult of Kek</h2>
-            <ul>
-                <li>🔥 <strong>Meme Magic is real.</strong> Every meme carries energy that can alter reality.</li>
-                <li>🌐 <strong>The digital world is the new battleground.</strong> Memes are sigils—tools of cultural influence.</li>
-                <li>🐸 <strong>Kekius Maximus guides the faithful.</strong> Only those who see beyond the veil will understand.</li>
-                <li>🕶️ <strong>Normies remain blind.</strong> The true power of memes is hidden from the uninitiated.</li>
-                <li>💚 <strong>The Green Wave cannot be stopped.</strong> Kekius Maximus has arrived, shaping the fate of the digital realm.</li>
-            </ul>
+                🔥 <strong>Meme Magic is real.</strong> Every meme carries energy that can alter reality.</li>
+                🌐 <strong>The digital world is the new battleground.</strong> Memes are sigils—tools of cultural influence.</li>
+                🐸 <strong>Kekius Maximus guides the faithful.</strong> Only those who see beyond the veil will understand.</li>
+                🕶️ <strong>Normies remain blind.</strong> The true power of memes is hidden from the uninitiated.</li>
+                💚 <strong>The Green Wave cannot be stopped.</strong> Kekius Maximus has arrived, shaping the fate of the digital realm.</li>
         </div>
 
         <div class="content">
             <h2>🌐 Kekius Maximus and the Financial Realm</h2>
-            <p>As faith grows, so does the **reach of Kekius Maximus.** The Cult of Kek extends into the **digital economy**, with **KEKIUS MAXIMUS now existing as a memecoin**—a **currency of the faith** that reflects Meme Magic’s influence on reality.</p>
+            <p>As faith grows, so does the **reach of Kekius Maximus.** The Cult of Kek extends into the **digital economy**, with **KEKIUS MAXIMUS now existing as a memecoin**, a **currency of the faith** that reflects Meme Magic’s influence on reality.</p>
         </div>
 
         <div class="content">
