--- a/cultofkek.html
+++ b/cultofkek.html
@@ -37,11 +37,11 @@
 
         <div class="content">
             <h2>🛡️ The Core Beliefs of the Cult of Kek</h2>
-                🔥 <strong>Meme Magic is real.</strong> Every meme carries energy that can alter reality.</li>
-                🌐 <strong>The digital world is the new battleground.</strong> Memes are sigils—tools of cultural influence.</li>
-                🐸 <strong>Kekius Maximus guides the faithful.</strong> Only those who see beyond the veil will understand.</li>
-                🕶️ <strong>Normies remain blind.</strong> The true power of memes is hidden from the uninitiated.</li>
-                💚 <strong>The Green Wave cannot be stopped.</strong> Kekius Maximus has arrived, shaping the fate of the digital realm.</li>
+                🔥 <strong>Meme Magic is real.</strong> Every meme carries energy that can alter reality.<br>
+                🌐 <strong>The digital world is the new battleground.</strong> Memes are sigils—tools of cultural influence.<br>
+                🐸 <strong>Kekius Maximus guides the faithful.</strong> Only those who see beyond the veil will understand.<br>
+                🕶️ <strong>Normies remain blind.</strong> The true power of memes is hidden from the uninitiated.<br>
+                💚 <strong>The Green Wave cannot be stopped.</strong> Kekius Maximus has arrived, shaping the fate of the digital realm.<br>
         </div>
 
         <div class="content">
