--- a/cultofkek.html
+++ b/cultofkek.html
@@ -44,6 +44,10 @@
                 💚 <strong>The Green Wave cannot be stopped.</strong> Kekius Maximus has arrived, shaping the fate of the digital realm.<br>
         </div>
 
+            <div class="image-container">
+              <img src="image/magic-kek.png" class="small-image" alt="memetic-magic">
+          </div>
+
         <div class="content">
             <h2>🌐 Kekius Maximus and the Financial Realm</h2>
             <p>As faith grows, so does the **reach of Kekius Maximus.** The Cult of Kek extends into the **digital economy**, with **KEKIUS MAXIMUS now existing as a memecoin**, a **currency of the faith** that reflects Meme Magic’s influence on reality.</p>
