--- a/kekistan.html
+++ b/kekistan.html
@@ -13,7 +13,7 @@
         <p class="praise">A land of memes, freedom, and eternal Kek.</p>
 
           <div class="image-container">
-              <img src="image/Flag_of_Kekistan.svg.png" class="small-image" alt="kekistan">
+              <img src="image/Flag_of_Kekistan.png" class="small-image" alt="kekistan">
           </div>
 
         <div class="content">
