--- a/kekistan.html
+++ b/kekistan.html
@@ -50,7 +50,7 @@
 
         <div class="button-container">
             <a href="kek.html" class="button">↩ Return to the Great Kek Archive</a>
-            <a href="index.html" class="button">🌑 Return to the Void</a>
+            <a href="index.html" class="button">🌑 Return to the Void...</a>
         </div>
 
     </div>
