--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #000000;
+            background-color: #f0f0f0;
             overflow: hidden;
         }
         #gameCanvas {
